--- a/CR-Frontend/src/app/service/service.component.html
+++ b/CR-Frontend/src/app/service/service.component.html
@@ -9,13 +9,13 @@
                     <a class="nav-link inactive-nav-a" aria-current="page" href="home">Home</a>
                 </li>
                 <li class="nav-item mx-4">
-                    <a class="nav-link inactive-nav-a" href="">About</a>
+                    <a class="nav-link inactive-nav-a" href="about">About</a>
                 </li>
                 <li class="nav-item mx-4">
                     <a class="nav-link active-nav-a" href="service">Service</a>
                 </li>
                 <li class="nav-item mx-4">
-                    <a class="nav-link inactive-nav-a" href="#">Contact</a>
+                    <a class="nav-link inactive-nav-a" href="contact">Contact</a>
                 </li>
 
             </ul>
