my third commit

--- a/CR-Frontend/src/app/service/service.component.html
+++ b/CR-Frontend/src/app/service/service.component.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="mt-3 mx-3 label-name">
                     <label>Enter your Password</label>
-                    <input type="text" class="mt-1 form-control"formControlName="pswd" name="pswd">
+                    <input type="password" class="mt-1 form-control"formControlName="pswd" name="pswd">
                 </div>
                 <div class="mt-4 mb-4 d-flex justify-content-center">
                     <input type="submit" class="btn btn-outline-primary w-50" value="Deposit" >
@@ -123,7 +123,7 @@
                 </div>
                 <div class="mt-3 mx-3 label-name">
                     <label>Enter your Password</label>
-                    <input type="text" class="mt-1 form-control" formControlName="pswd" name="pswd">
+                    <input type="password" class="mt-1 form-control" formControlName="pswd" name="pswd">
                 </div>
                 <div class="mt-4 mb-4 d-flex justify-content-center">
                     <input type="submit" class="btn btn-outline-danger w-50" value="Withdraw">
